2015-06-03  Richard Biener  <rguenther@suse.de>

PR tree-optimization/63916
	* tree-ssa-sccvn.c (vn_reference_maybe_forwprop_address):
	Forward-propagate non-invariant addresses by splicing their
	reference ops if the result isn't going to be used by PRE.
	(vn_reference_lookup_3): Remove pointless assert.

	* gcc.dg/tree-ssa/ssa-fre-45.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@224061 138bc75d-0d04-0410-961f-82ee72b054a4